<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:id="@+id/card_ride"
    card_view:cardBackgroundColor="@color/gray"
    card_view:cardCornerRadius="16dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin">

        <ImageView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/map">

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/white"
                android:text="@string/app_name"
                android:textSize="@dimen/litle_title_size"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/state_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/litle_title_size"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ride_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    android:text="@string/ride_id"
                    android:textSize="@dimen/midle_title_size"/>

                <TextView
                    android:id="@+id/ride_id_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    android:text="@string/ride_id"
                    android:textSize="@dimen/midle_title_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/origin_station"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    android:text="@string/origin_station"
                    android:textSize="@dimen/midle_title_size"/>

                <TextView
                    android:id="@+id/origin_station_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    android:text="@string/origin_station"
                    android:textSize="@dimen/midle_title_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/station_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    android:text="@string/station_path"
                    android:textSize="@dimen/midle_title_size"/>

                <TextView
                    android:id="@+id/station_path_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    android:text="@string/ride_id"
                    android:textSize="@dimen/midle_title_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    android:text="@string/date"
                    android:textSize="@dimen/midle_title_size"/>

                <TextView
                    android:id="@+id/date_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    android:text="@string/ride_id"
                    android:textSize="@dimen/midle_title_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    android:text="@string/distance"
                    android:textSize="@dimen/midle_title_size"/>

                <TextView
                    android:id="@+id/distance_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    android:text="@string/distance"
                    android:textSize="@dimen/midle_title_size"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>